syntax = "proto3";

package domain.auth.v1;

option go_package = "github.com/aide-family/sovereign/pkg/domain/auth/v1;authv1";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message User {
    string openID = 1;
    string name = 2;
    string nickname = 3;
    string email = 4;
    string avatar = 5;
    string app = 6;
    bytes raw = 7;
    string remark = 8;
}

message OAuth2Config {
    string clientID = 1;
    string clientSecret = 2;
    string redirectURL = 3;
    repeated string scopes = 4;
    Endpoint endpoint = 5;
}

message Endpoint {
    string authURL = 1;
    string tokenURL = 2;
    string deviceAuthURL = 3;
    int32 authStyle = 4;
}

message LoginRequest {
    User user = 1;
    OAuth2Config oauthConfig = 2;
}

message LoginResponse {
    string redirectURL = 1;
}